--- a/styles.css
+++ b/styles.css
@@ -17,15 +17,16 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 120%;
+    width: 100%;
     margin: 0 auto;
 }
 
 .profile-photo {
-    width: 95px;
-    height: 95px;
-    border-radius: 50%;
-    border: 3px solid #fff;
+    width: 120px;
+    height: 120px;
+    border-radius: 60%;
+    border: 10px solid #fff;
+    align-items:center;
 }
 
 nav ul {
